--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-consulta/asignatura-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-consulta/asignatura-consulta.component.html
@@ -1,16 +1,17 @@
 
-
     <h2 style="margin-bottom: 40px;" class="text-center">Consulta de Asignaturas</h2> 
 
-    <div class="col-6" style="margin-top: 20px; margin-left: 50px;">
+    <div class="col-6" style="margin-top: 20px; margin-left: 50px; display: inline-block;">
         
-      <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Texto de filtro" >
-    
+      <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Texto de filtro por nombre" >
+      
+      <button mat-stroked-button style="border-color: #339240;" (click)="buscar()">Filtrar</button>
+           
     </div>
 
   <hr>
   
-  <table class="table table-striped" *ngIf="asignaturas && asignaturas.length">
+  <table class="table table-striped" *ngIf="asignaturas && asignaturas.length && asignatura==undefined">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -28,5 +29,30 @@
         <td>{{asignatura.areaAsignatura  }}</td>
         <td>{{ asignatura.descripcionAsignatura }}</td>
       </tr>
+
     </tbody>
+
+
+
+  </table>
+
+  <table class="table table-striped" *ngIf="asignatura">
+
+    <thead>
+      <tr>
+        <th scope="col">Codigo Asignatura</th>
+        <th scope="col">Nombre Asignatura</th>
+        <th scope="col">Area Asignatura</th>
+        <th scope="col">Descripcion</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngIf="asignatura">
+        <td>{{ asignatura.codigoAsignatura }} </td>
+        <td>{{ asignatura.nombreAsignatura }}</td>
+        <td>{{asignatura.areaAsignatura  }}</td>
+        <td>{{ asignatura.descripcionAsignatura }}</td>
+      </tr>
+    </tbody>
+
   </table>
