confirmaciones y cuadros de dialogo

--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-registro/asignatura-registro.component.css
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-registro/asignatura-registro.component.css
@@ -2,3 +2,15 @@
     margin: 50px 50px;
 }
 
+.divflex{
+    display: flex;
+}
+
+.one{
+    flex: 1 1 auto;
+}
+
+.two{
+    flex-direction: row-reverse;
+}
+
