--- a/ExpoSoftware/ClientApp/src/app/cuadro-dialogo/cuadro-dialogo.component.html
+++ b/ExpoSoftware/ClientApp/src/app/cuadro-dialogo/cuadro-dialogo.component.html
@@ -1,1 +1,19 @@
-<p>cuadro-dialogo works!</p>
+<h1 mat-dialog-title>
+    <div class="text-center">
+        {{data.name}}
+    </div>
+</h1>
+
+<div mat-dialog-content> 
+    <div class="text-justify">
+        {{data.descripcion}}
+    </div>
+</div>
+
+
+<div class="text-center" style="margin-top: 20px;">
+        
+    <button mat-button mat-dialog-close="true">Aceptar</button>
+    <button mat-button mat-dialog-close="false">Cancelar</button>
+
+</div>
