cambio en cuadro de busqueda

--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-consulta/asignatura-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-consulta/asignatura-consulta.component.html
@@ -3,7 +3,7 @@
 
     <div class="col-6" style="margin-top: 20px; margin-left: 50px; display: inline-block;">
         
-      <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Texto de filtro por nombre" >
+      <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="buscar por identifiacion" >
       
            
     </div>
