--- a/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,9 +3,18 @@
   <div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun" >
 
     <mat-toolbar color="primary" class="example-toolbar" >
-      <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
-      <h1 class="example-app-name">Menu Expo-Sofware Admin</h1>
-  
+
+        <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+        <h1 class="example-app-name">Menu Expo-Sofware Admin</h1>
+        
+      <span class="example-spacer"></span>
+
+      <a class="navbar-brand" [routerLink]="['/']" style="opacity: 1; color: #ffffff;">
+
+        <img src="../../assets/upc-logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+        Ing sistemas
+      </a>
+
     </mat-toolbar>
 
 
