--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-consulta/asignatura-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-consulta/asignatura-consulta.component.html
@@ -1,17 +1,15 @@
 
     <h2 style="margin-bottom: 40px;" class="text-center">Consulta de Asignaturas</h2> 
 
-    <div class="col-6" style="margin-top: 20px; margin-left: 50px; display: inline-block;">
+    <div class="col-6" style="margin-left: 20%; margin-right: 20%;" class="text-center">
         
-      <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Texto de filtro por nombre" >
+      <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Texto de filtro por nombre o codigo" >
       
            
     </div>
-
     
-    <button mat-stroked-button style="border-color: #339240;" (click)="buscar()">Filtrar</button>
-
   <hr>
+
   
   <table class="table table-striped" *ngIf="asignaturas && asignaturas.length && asignatura==undefined">
     <thead>
@@ -24,7 +22,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let asignatura of asignaturas; index as i ">
+      <tr *ngFor="let asignatura of asignaturas | filtroAsignatura:searchText ; index as i ">
         <th scope="row">{{ i + 1 }}</th>
         <td>{{ asignatura.codigoAsignatura }} </td>
         <td>{{ asignatura.nombreAsignatura }}</td>
@@ -38,23 +36,4 @@
 
   </table>
 
-  <table class="table table-striped" *ngIf="asignatura">
-
-    <thead>
-      <tr>
-        <th scope="col">Codigo Asignatura</th>
-        <th scope="col">Nombre Asignatura</th>
-        <th scope="col">Area Asignatura</th>
-        <th scope="col">Descripcion</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngIf="asignatura">
-        <td>{{ asignatura.codigoAsignatura }} </td>
-        <td>{{ asignatura.nombreAsignatura }}</td>
-        <td>{{asignatura.areaAsignatura  }}</td>
-        <td>{{ asignatura.descripcionAsignatura }}</td>
-      </tr>
-    </tbody>
-
-  </table>
+ 
