--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-registro/asignatura-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-registro/asignatura-registro.component.html
@@ -1,54 +1,90 @@
 
 <div class="container">
 
+  <blockquote class="blockquote text-center">
+    <p class="mb-0" class="display-3 colorLetras">Registro De Asignaturas</p>
+    <footer class="blockquote-footer">Guardar todo lo referente a los datos de la asignatura</footer>
+  </blockquote>
 
-     <h2>Registro de Asignaturas</h2>
-    
 
-<form>
+<form [formGroup]="formGroup">
+
         
     <div class="input-group input-group-sm mb-3">
 
         <div class="input-group mb-3 input divflex" >
+
             <div class="input-group-prepend">
               <span class="input-group-text" id="inputGroup-sizing-default">Codigo de la asignatura</span>
             </div>
-            <input type="text" placeholder="Digite el codigo" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"  name="codigoAsignatura"  [(ngModel)]="asignatura.codigoAsignatura" class="form-control" >
 
-            <button mat-stroked-button style="border-color: #339240;" (click)="consulta()"><mat-icon>search</mat-icon></button>
+            <input type="text" placeholder="Digite el codigo" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="codigoAsignatura" [ngClass]="{ 'is-invalid': control.codigoAsignatura.errors && control.codigoAsignatura.touched }" >
 
-          </div>
+            <div *ngIf="control.codigoAsignatura.errors" class="invalid-feedback" style="margin-left: 21%;">
+              
+              <div *ngIf="control.codigoAsignatura.errors.required">Debe digitar un valor para la cedula</div>
+              <div *ngIf="control.codigoAsignatura.errors.maxlength">No se puede digitar mas de 10 caracteres</div>
 
-        <div class="input-group mb-3 input">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="inputGroup-sizing-default">Nombre de la asignatura</span>
             </div>
-            <input type="text" placeholder="Digite el nombre" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"  name="nombreAsignatura"  [(ngModel)]="asignatura.nombreAsignatura" class="form-control" >
-        </div>
+
+          </div>
 
 
         <div class="input-group mb-3 input">
 
-          <div class="input-group-prepend">
-            <label class="input-group-text" for="area">Areas</label>
-          </div>
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroup-sizing-default">Nombre de la asignatura</span>
+              </div>
+              <input type="text" placeholder="Digite el nombre" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"  class="form-control"  formControlName="nombreAsignatura" [ngClass]="{ 'is-invalid': control.nombreAsignatura.errors && control.nombreAsignatura.touched }">
+              
+            
+              <div *ngIf="control.nombreAsignatura.errors" class="invalid-feedback" style="margin-left: 21%;">
+                
+                <div *ngIf="control.nombreAsignatura.errors.required">Debe digitar un valor para el nombre</div>
+    
+              </div>
 
-          <select class="custom-select" id="areaA" name="areaAsignatura"  [(ngModel)]="asignatura.areaAsignatura"  class="form-control">
-            <option selected>Selecionar...</option>
-            <option value="Base de datos">Base De Datos</option>
-            <option value="Inteligencia Artificial">Inteligencia Artificial</option>
-            <option value="Ingeniria software">Ingeniria software</option>
-          </select>
+          </div>
+          
+  
+
+
+        <div class="input-group mb-3 input">
+
+            <div class="input-group-prepend">
+              <label class="input-group-text" for="area">Areas</label>
+            </div>
+
+            <select class="custom-select" id="areaA" name="areaAsignatura"  formControlName="areaAsignatura" class="form-control" [ngClass]="{ 'is-invalid': control.areaAsignatura.errors && control.areaAsignatura.touched }">
+              <option selected>Selecionar...</option>
+              <option value="Base de datos">Base De Datos</option>
+              <option value="Inteligencia Artificial">Inteligencia Artificial</option>
+              <option value="Ingeniria software">Ingeniria software</option>
+            </select>
+
+            <div *ngIf="control.areaAsignatura.errors" class="invalid-feedback" style="margin-left: 7%;">
+                
+              <div *ngIf="control.areaAsignatura.errors.validArea">Debe seleccionar un valor</div>
+  
+            </div>
 
         </div>
 
 
           <div class="input-group mb-3 input">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="inputGroup-sizing-default">Descripción de la asignatura</span>
-            </div>
-            <input type="text"  placeholder="Digite la descripción...." class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default"  name="descripcionAsignatura"  [(ngModel)]="asignatura.descripcionAsignatura" class="form-control">
-        </div>
+
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="inputGroup-sizing-default">Descripción de la asignatura</span>
+              </div>
+              <input type="text"  placeholder="Digite la descripción...." class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" class="form-control"  formControlName="descripcionAsignatura" [ngClass]="{ 'is-invalid': control.descripcionAsignatura.errors && control.descripcionAsignatura.touched }">
+
+              <div *ngIf="control.descripcionAsignatura.errors" class="invalid-feedback" style="margin-left: 25%;">
+                  
+                <div *ngIf="control.descripcionAsignatura.errors.required">Debe digitar un valor </div>
+    
+              </div>
+
+          </div>
 
         
       
@@ -57,11 +93,12 @@
 
         <div class="text-center">
 
-           <button mat-stroked-button style="border-color: #339240; margin-right: 20px; margin-top: 20px;"  (click)="confirmarGuardado()">Registrar</button>
+           <button mat-stroked-button style="border-color: #339240; margin-right: 20px; margin-top: 20px;"  (click)="onSubmit()" [disabled]="formGroup.invalid" >Registrar</button>
 
            <button mat-stroked-button style="border-color: #339240; " type="reset" >Limpiar</button>
 
-        </div>
+     </div>
+
             
     
 </form>
