--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-consulta/asignatura-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-consulta/asignatura-consulta.component.html
@@ -1,42 +1,40 @@
 
-     <blockquote class="blockquote text-center">
-      <p class="mb-0" class="display-3 colorLetras">Consulta De Asignaturas</p>
-    </blockquote>
+      <blockquote class="blockquote text-center">
+        <p class="mb-0" class="display-3 colorLetras">Consulta De Asignaturas</p>
+      </blockquote>
 
 
-    <div class="col-6" style="margin-left: 20%; margin-right: 20%; margin-top: 40px; margin-bottom: 40px;" class="text-center">
-        
-      <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Texto de filtro por nombre o codigo" >
-         
-    </div>
-    
-  <hr>
-
-  
-  
-  <table class="table table-striped" *ngIf="asignaturas && asignaturas.length && asignatura==undefined">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Codigo Asignatura</th>
-        <th scope="col">Nombre Asignatura</th>
-        <th scope="col">Area Asignatura</th>
-        <th scope="col">Descripcion</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let asignatura of asignaturas | filtroAsignatura:searchText ; index as i ">
-        <th scope="row">{{ i + 1 }}</th>
-        <td>{{ asignatura.codigoAsignatura }} </td>
-        <td>{{ asignatura.nombreAsignatura }}</td>
-        <td>{{asignatura.areaAsignatura  }}</td>
-        <td>{{ asignatura.descripcionAsignatura }}</td>
-      </tr>
-
-    </tbody>
+      <div class="col-6" style="margin-left: 20%; margin-right: 20%; margin-top: 40px; margin-bottom: 40px;" class="text-center">
+          
+        <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Texto de filtro por nombre o codigo" >
+          
+      </div>
+      
+    <hr>
 
 
 
-  </table>
+    <table class="table table-striped" *ngIf="asignaturas && asignaturas.length && asignatura==undefined">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Codigo Asignatura</th>
+          <th scope="col">Nombre Asignatura</th>
+          <th scope="col">Area Asignatura</th>
+          <th scope="col">Descripcion</th>
+          <th scope="col">Editar/Eliminar</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let asignatura of asignaturas | filtroAsignatura:searchText ; index as i ">
+          <th scope="row">{{ i + 1 }}</th>
+          <td>{{ asignatura.codigoAsignatura }} </td>
+          <td>{{ asignatura.nombreAsignatura }}</td>
+          <td>{{asignatura.areaAsignatura  }}</td>
+          <td>{{ asignatura.descripcionAsignatura }}</td>
+          <td style="text-align: justify;"> <a routerLink='/asignaturaEdicion/{{asignatura.codigoAsignatura}}'>Seleccionar</a></td>
+        </tr>
 
- 
+      </tbody>
+
+    </table>
