--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-registro/asignatura-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-registro/asignatura-registro.component.html
@@ -18,7 +18,10 @@
               <span class="input-group-text" id="inputGroup-sizing-default">Codigo de la asignatura</span>
             </div>
 
-            <input type="text" placeholder="Digite el codigo" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="codigoAsignatura" [ngClass]="{ 'is-invalid': control.codigoAsignatura.errors && control.codigoAsignatura.touched }" >
+            <input type="text" placeholder="Digite el codigo" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="codigoAsignatura" [ngClass]="{ 'is-invalid': control.codigoAsignatura.errors && control.codigoAsignatura.touched }" > 
+
+            
+           <button mat-stroked-button style="border-color: #339240; "  (click)="buscar()"> <mat-icon>search</mat-icon> </button>
 
             <div *ngIf="control.codigoAsignatura.errors" class="invalid-feedback" style="margin-left: 21%;">
               
@@ -27,6 +30,7 @@
 
             </div>
 
+        
           </div>
 
 
