agregacion de formularios

--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-edicion/asignatura-edicion.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-edicion/asignatura-edicion.component.html
@@ -31,7 +31,7 @@
             </div>
 
 
-            <input type="text" name="nombre" [(ngModel)]="asignatura.nombreAsignatura" class="form-control" />
+            <input type="text" name="nombreAsignatura" [(ngModel)]="asignatura.nombreAsignatura" class="form-control" />
           
           </div>
 
@@ -59,11 +59,11 @@
           <div class="input-group mb-3 input">
 
             <div class="input-group-prepend">
-              <span class="input-group-text" id="inputGroup-sizing-default">Nombre de la asignatura</span>
+              <span class="input-group-text" id="inputGroup-sizing-default">Descripcion de la asignatura</span>
             </div>
 
 
-            <input type="text" name="descripcion" [(ngModel)]="asignatura.descripcionAsignatura" class="form-control" />
+            <input type="text" name="descripcionAsignatura"  [(ngModel)]="asignatura.descripcionAsignatura" class="form-control" />
           
           </div>
 
