agregacion del manejo de errores

--- a/ExpoSoftware/ClientApp/src/app/cuadro-dialogo/cuadro-dialogo.component.html
+++ b/ExpoSoftware/ClientApp/src/app/cuadro-dialogo/cuadro-dialogo.component.html
@@ -6,7 +6,10 @@
 
 <div mat-dialog-content> 
     <div class="text-justify">
-        {{data.descripcion}}
+        
+    <span [innerHTML]="data.descripcion"></span>
+
+    
     </div>
 </div>
 
