--- a/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -53,3 +53,16 @@ mat-sidenav{
 .mat-list-item{
   color: rgb(60, 60, 60);
 }
+
+.menu{
+
+  border-radius: 56px 56px 56px 56px;
+  -moz-border-radius: 56px 56px 56px 56px;
+  -webkit-border-radius: 56px 56px 56px 56px;
+  border: 10px solid #ffffff;
+
+  margin-top: 40px;
+  background-color: #ffffff;
+
+
+}
