--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-consulta/asignatura-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-consulta/asignatura-consulta.component.html
@@ -20,7 +20,7 @@
           <th scope="col">#</th>
           <th scope="col">Codigo Asignatura</th>
           <th scope="col">Nombre Asignatura</th>
-          <th scope="col">Area Asignatura</th>
+          <th scope="col">Area de la Asignatura</th>
           <th scope="col">Descripcion</th>
           <th scope="col">Editar/Eliminar</th>
         </tr>
