--- a/ExpoSoftware/ClientApp/src/app/home/home.component.html
+++ b/ExpoSoftware/ClientApp/src/app/home/home.component.html
@@ -1,45 +1,52 @@
+<div class="container-fluid">
 
-  <ngb-carousel >
-    <ng-template *ngFor="let item of noticias" ngbSlide>
-      <div class="picsum-img-wrapper">
-        <img src="{{item.img}}" alt="Random first slide" [routerLink]="item.route" >
+    <ngb-carousel >
+      <ng-template *ngFor="let item of noticias" ngbSlide>
+        <div class="picsum-img-wrapper">
+          <img src="{{item.img}}" alt="Random first slide" [routerLink]="item.route" >
+        </div>
+        <div class="carousel-caption">
+          <h3>{{item.name}}</h3>
+          <p>{{item.desc}}</p>
+        </div>
+      </ng-template>
+    </ngb-carousel>
+  
+
+    <h1 style="font-size: 40px; margin-top: 5%;" class="text-center">Descripcion General </h1>
+
+    <div class="card-group " style="margin-top: 5%;">
+
+      <div class="card sombras" style="margin: 80px 10px;">
+        <img src="../../assets/descarga.png" width="50%"  height="50%" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">mision</h5>
+          <p class="card-text">Formar Ingenieros de Sistemas, con amplios conocimientos en la gestión de las tecnologías de la información y la comunicación con énfasis en el desarrollo de software, a través de una formación integral basada en el actuar profesional, investigativo, ético, social, moral y tecnológico; con capacidad de responder a los constantes cambios y retos que ofrece el entorno, permitiéndole alcanzar su propia realización.</p>
+        
+        </div>
       </div>
-      <div class="carousel-caption">
-        <h3>{{item.name}}</h3>
-        <p>{{item.desc}}</p>
+      
+      <div class="card sombras" style="margin: 80px 10px;">
+        <img src="../../assets/vision.png"  width="50%"  height="50%" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">vision</h5>
+          <p class="card-text">El programa de Ingeniería de Sistemas proyecta una formación con calidad enmarcada en el conocimiento, desarrollo, investigación, innovación y nuevas tecnologías de la información y comunicación; acorde a los cambios tecnológicos y enfoque hacia la integración y desarrollo de proyectos que generen impacto social en el contexto regional, nacional e internacional</p>
+        </div>
       </div>
-    </ng-template>
-  </ngb-carousel>
-
-  <h1 style="font-size: 40px; margin-top: 5%;" class="text-center">Descripcion General </h1>
-
-  <div class="card-group " style="margin-top: 5%;">
-
-    <div class="card sombras" style="margin: 80px 10px;">
-      <img src="../../assets/descarga.png" width="50%"  height="50%" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">mision</h5>
-        <p class="card-text">Formar Ingenieros de Sistemas, con amplios conocimientos en la gestión de las tecnologías de la información y la comunicación con énfasis en el desarrollo de software, a través de una formación integral basada en el actuar profesional, investigativo, ético, social, moral y tecnológico; con capacidad de responder a los constantes cambios y retos que ofrece el entorno, permitiéndole alcanzar su propia realización.</p>
-       
+      
+      <div class="card sombras"  style="margin: 80px 10px;" >
+        <img src="../../assets/lema.png"  width="50%"  height="50%" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">lema</h5>
+          <p class="card-text">hacia el futuro</p>
+        </div>
       </div>
+
     </div>
-    
-    <div class="card sombras" style="margin: 80px 10px;">
-      <img src="../../assets/vision.png"  width="50%"  height="50%" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">vision</h5>
-        <p class="card-text">El programa de Ingeniería de Sistemas proyecta una formación con calidad enmarcada en el conocimiento, desarrollo, investigación, innovación y nuevas tecnologías de la información y comunicación; acorde a los cambios tecnológicos y enfoque hacia la integración y desarrollo de proyectos que generen impacto social en el contexto regional, nacional e internacional</p>
-      </div>
-    </div>
-    
-    <div class="card sombras"  style="margin: 80px 10px;" >
-      <img src="../../assets/lema.png"  width="50%"  height="50%" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">lema</h5>
-        <p class="card-text">hacia el futuro</p>
-       </div>
-    </div>
 
-  </div>
 
+
+</div>
+
+ 
 
