--- a/ExpoSoftware/ClientApp/src/app/comite/docente/docente-registro/docente-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/docente/docente-registro/docente-registro.component.html
@@ -5,7 +5,11 @@
 
 <div  *ngIf="asignaturas && asignaturas.length"> 
 
-    <h2>Registro de Docente</h2>
+        
+    <blockquote class="blockquote text-center">
+      <p class="mb-0" class="display-3 colorLetras">Registro Docente</p>
+      <footer class="blockquote-footer">Registro de los docentes asignados para la feria</footer>
+  </blockquote>
 
 
 
