--- a/ExpoSoftware/ClientApp/src/app/comite/area/area-consulta/area-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/area/area-consulta/area-consulta.component.html
@@ -30,7 +30,7 @@
           <th scope="row">{{ i + 1 }}</th>
           <td>{{ area.codigoArea }} </td>
           <td>{{ area.nombreArea }}</td>
-          <td style="text-align: justify;"> <a routerLink='/'></a>Seleccionar</td>
+          <td style="text-align: justify;"> <a routerLink='/areaEdicion/{{area.codigoArea}}'>Seleccionar</a></td>
         </tr>
       </tbody>
 
