--- a/ExpoSoftware/ClientApp/src/app/home/home.component.html
+++ b/ExpoSoftware/ClientApp/src/app/home/home.component.html
@@ -6,7 +6,7 @@
           <img src="{{item.img}}" alt="Random first slide" [routerLink]="item.route" >
         </div>
         <div class="carousel-caption" >
-          <h3 style="font-size: 30px; background-color: black; opacity: 0.7; margin-left: 90px; margin-right: 90px;" >{{item.name}}</h3>
+          <h3 style="font-size: 30px; background-color: #6d6d6d; opacity: 0.7; margin-left: 90px; margin-right: 90px;" >{{item.name}}</h3>
           <p class="texto_nuevo">{{item.desc}}</p>
         </div>
       </ng-template>
