--- a/ExpoSoftware/ClientApp/src/app/comite/area/area-consulta/area-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/area/area-consulta/area-consulta.component.html
@@ -7,9 +7,14 @@
       <div class="col-6" style="margin-left: 20%; margin-right: 20%; margin-top: 40px; margin-bottom: 40px;" class="text-center">
           
         <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Texto de filtro por nombre o codigo" >
-          
+
+             
+      <div *ngIf="loading">
+        <img src="../../assets/Cargando.gif" height="40px" width="40px" alt="loading">
       </div>
-      
+
+      </div>
+ 
     <hr>
 
 
