--- a/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-registro/asignatura-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/asignatura/asignatura-registro/asignatura-registro.component.html
@@ -63,7 +63,7 @@
               <option selected>Selecionar...</option>
               <option value="Base de datos">Base De Datos</option>
               <option value="Inteligencia Artificial">Inteligencia Artificial</option>
-              <option value="Ingeniria software">Ingeniria software</option>
+              <option value="Ingeniria software">Ingenieria software</option>
             </select>
 
             <div *ngIf="control.areaAsignatura.errors" class="invalid-feedback" style="margin-left: 7%;">
@@ -80,7 +80,7 @@
               <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">Descripción de la asignatura</span>
               </div>
-              <input type="text"  placeholder="Digite la descripción...." class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" class="form-control"  formControlName="descripcionAsignatura" [ngClass]="{ 'is-invalid': control.descripcionAsignatura.errors && control.descripcionAsignatura.touched }">
+              <input type="text"  placeholder="Digite la descripción" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" class="form-control"  formControlName="descripcionAsignatura" [ngClass]="{ 'is-invalid': control.descripcionAsignatura.errors && control.descripcionAsignatura.touched }">
 
               <div *ngIf="control.descripcionAsignatura.errors" class="invalid-feedback" style="margin-left: 25%;">
                   
