--- a/ExpoSoftware/ClientApp/src/app/comite/docente/docente-registro/docente-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/docente/docente-registro/docente-registro.component.html
@@ -1,56 +1,100 @@
+<div class="container">
+
+
 
 <div *ngIf="asignaturas.length==0">
 
-    <h2>Para poder registrar docente debe tener asignaturas registradas</h2>
-
+  <blockquote class="blockquote text-center">
+    <p class="mb-0" class="display-3 colorLetras">Por favor registre una asignatura</p>
+    <footer class="blockquote-footer">Para poder llevar a cabo el registro del docente debe existir por lo menos una asignatura en el sistema</footer>
+  </blockquote>
 </div>
 
 <div  *ngIf="asignaturas && asignaturas.length"> 
 
-    <h2>Registro de Docente</h2>
 
+  <blockquote class="blockquote text-center">
+    <p class="mb-0" class="display-3 colorLetras">Registro de Docente</p>
+    <footer class="blockquote-footer">Guardar todo lo referente a los datos del docente</footer>
+  </blockquote>
 
+  <form [formGroup]="formGroup">
 
-        <div class="input-group mb-3" style="margin-top: 5%;" >
+    <div class="input-group input-group-sm mb-3">
+
+        <div class="input-group mb-3 input divflex" style="margin-top: 5%;" >
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">Identificacion</span>
             </div>
-            <input type="text" class="form-control" placeholder="digite la identificacion" aria-label="Username" aria-describedby="basic-addon1">
+            
+            <input type="text" class="form-control" placeholder="digite la identificacion" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="identificacion" [ngClass]="{'is-invalid': control.identificacion.errors && control.identificacion.touched }">
+            <button mat-stroked-button style="border-color: #339240; "  (click)="buscar()"> <mat-icon>search</mat-icon> </button>
+         
+         
+          <div *ngIf="control.identificacion.errors" class="invalid-feedback" style="margin-left: 12%;">
+          
+            <div *ngIf="control.identificacion.errors.required"> Debe digitar una identificacion para el docente </div>
+          
+            <div *ngIf="control.identificacion.errors.maxlength"> No se puede digitar más de diez(10) caracteres </div>
+
+         </div>
+         
+         
           </div>
 
           
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon1">nombre del docente</span>
+              <span class="input-group-text" id="basic-addon1">Nombre del docente</span>
             </div>
-            <input type="text" class="form-control" placeholder="digite la el nombre" aria-label="Username" aria-describedby="basic-addon1">
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName = "nombre" [ngClass]="{'is-invalid': control.nombre.errors && control.nombre.touched}" >
+          
+            <div *ngIf="control.nombre.errors" class="invalid-feedback" style="margin-left: 17%;">
+                
+              <div *ngIf="control.nombre.errors.required">Debe digitar un valor para el nombre</div>
+  
+            </div>
           </div>
 
 
 
-          <div class="input-group">
+          <div class="input-group mb-3">
             <div class="input-group-prepend">
-              <span class="input-group-text">Descripcion</span>
+              <span class="input-group-text"  id="basic-addon1">Descripcion</span>
             </div>
-            <textarea class="form-control" aria-label="With textarea"></textarea>
+            <input type="text"  placeholder="Digite la descripción" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" class="form-control" formControlName = "descripcion" [ngClass]="{'is-invalid': control.descripcion.errors && control.descripcion.touched}">
+            
+          <div *ngIf="control.descripcion.errors" class="invalid-feedback" style="margin-left: 11%;">
+              <div *ngIf="control.descripcion.errors.required"> Debe ingresar una descripción </div>
+          </div>
+
+
+
           </div>
         
      <div class="input-group mb-3" style="margin-top: 20px;" >
 
             <div class="input-group-prepend">
-                <label class="input-group-text" for="area">seleccione el tipo de docente</label>
+                <label class="input-group-text" for="tipo">seleccione el tipo de docente</label>
               </div>
             
-            <select class="custom-select" id="areaA" name="areaAsignatura"  class="form-control">
+            <select class="custom-select" id="tipoA" name="tipo"  class="form-control">
                 <option selected>Selecionar...</option>
                 <option value="Evaluador">Docente Evaluador</option>
                 <option value="Acesor">Docente Acesor de proyecto</option>
             </select>
+
+            <div *ngIf="control.tipo.errors" class="invalid-feedback" style="margin-left: 25%;">
+                
+              <div *ngIf="control.tipo.errors.validTipo"> Debe seleccionar un tipo de docente</div>
+              
+  
+            </div>
     
-    </div>
+      </div>
 
              
-    <div class="input-group mb-3" >
+     <div class="input-group mb-3" >
 
         <div class="input-group-prepend">
             <label class="input-group-text" for="area">seleccione la asignatura</label>
@@ -61,19 +105,26 @@
             <option *ngFor="let item of asignaturas" value="{{item.nombreAsignatura}}">{{item.nombreAsignatura}}</option>
         </select>
 
+
+        <div *ngIf="control.asignaturas.errors" class="invalid-feedback" style="margin-left: 7%;">
+                
+          <div *ngIf="control.asignaturas.errors.ValidAsignaturas">Debe seleccionar un valor</div>
+
+        </div>
+
+
     </div>
 
-
+  </div>
           <div class="text-center">
 
-            <button mat-stroked-button style="border-color: #339240; margin-right: 20px; margin-top: 20px;">Registrar</button>
+            <button mat-stroked-button style="border-color: #339240; margin-right: 20px; margin-top: 20px;"  (click)="onSubmit()" >Registrar</button>
  
             <button mat-stroked-button style="border-color: #339240; " type="reset">Limpiar</button>
  
          </div>
              
+  </form>
 
 </div>
-
-
 
