agregando modificaciones diseño

--- a/ExpoSoftware/ClientApp/src/app/comite/docente/docente-consulta/docente-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/docente/docente-consulta/docente-consulta.component.html
@@ -21,7 +21,7 @@
       <th scope="col">#</th>
       <th scope="col">Identificacion</th>
       <th scope="col">Nombre</th>
-      <th scope="col">Descripcion</th>
+      <th scope="col">Especialidad</th>
       <th scope="col">Tipo</th>
       <th scope="col">Asignatura</th>
       
