--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
@@ -1,1 +1,6 @@
-<h1>registo proyecto</h1>
+<div class="example-container">
+    <mat-form-field appearance="fill">
+        <mat-label>hola mundo</mat-label>
+        <input matInput>
+      </mat-form-field>
+</div>
