--- a/ExpoSoftware/ClientApp/src/app/comite/docente/docente-consulta/docente-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/docente/docente-consulta/docente-consulta.component.html
@@ -15,7 +15,7 @@
 
 
 
-<table class="table table-striped" *ngIf="docentes && docentes.length && docente == undefined">
+<table class="table table-striped" *ngIf="docentes && docentes.length && asignatura">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -23,20 +23,24 @@
       <th scope="col">Nombre</th>
       <th scope="col">Especialidad</th>
       <th scope="col">Tipo</th>
+      <th scope="col">Codigo de la asignatura</th>
       <th scope="col">Asignatura</th>
       
     </tr>
   </thead>
 
   <tbody>
-    <tr *ngFor="let docente of docentes | filtroDocente:searchText; index as i ">
+    <tr *ngFor="let docente of docentes  | filtroDocente:searchText; index as i ">
       <th scope="row">{{ i + 1 }}</th>
       <td>{{ docente.identificacion}} </td>
       <td>{{ docente.nombre }}</td>
       <td>{{ docente.descripcion }}</td>
       <td>{{ docente.tipo }}</td>
-      <td>{{ docente.asignaturas }}</td>
-     
+      <td>{{ docente.asignaturas}}</td>
+      <div *ngFor="let itemUno of asignatura ">
+        <td *ngIf="itemUno.codigoAsignatura===docente.asignaturas">{{itemUno.nombreAsignatura}}</td>
+      </div>
+
     </tr>
 
   </tbody>
