--- a/ExpoSoftware/ClientApp/src/app/comite/area/area-edicion/area-edicion.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/area/area-edicion/area-edicion.component.html
@@ -39,7 +39,7 @@
 
             <button mat-stroked-button style="border-color: #339240; margin-right: 20px; margin-top: 20px; margin-bottom: 40px;"  (click)="onSubmit('1')" >Actualizar</button>
 
-            <button mat-stroked-button style="border-color: #339240; "  >Eliminar</button>
+            <button mat-stroked-button style="border-color: #339240; " (click)="onSubmit('2')" >Eliminar</button>
 
          </div>
 
