nuevos cambios en la pagina web

--- a/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ExpoSoftware/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -94,6 +94,9 @@
                   </div>
 
 
+                  <a mat-list-item routerLink="/proyectoConsulta"> <mat-icon>search </mat-icon> solicitudes de proyecto</a>
+
+
 
                   <mat-list-item style="margin-top: 50px; font-size: 20px;">
                     Docente Asesor
