--- a/ExpoSoftware/ClientApp/src/app/User/user-register/user-register.component.html
+++ b/ExpoSoftware/ClientApp/src/app/User/user-register/user-register.component.html
@@ -1,1 +1,58 @@
-<p>user-register works!</p>
+<div class="container">
+    <blockquote class="blockquote text-center">
+        <p class="mb-0" class="display-3 colorLetras">Registro de usuario</p>
+        <footer class="blockquote-footer">Ingrese los datos del usuario a registrar</footer>
+    </blockquote>
+
+    <form [formGroup]="userGroup">
+        <div class="nput-group input-group-sm mb-3">
+            <div class="input-group mb-3 input divflex">
+                <div>
+                    <span class="input-group-text" id="inputGroup-sizing-default">Usuario</span>
+                </div>
+                <input type="text" placeholder="Usuario" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="userName" [ngClass]="{ 'is-invalid': control.userName.errors && control.userName.touched }"> 
+                <div *ngIf="control.userName.errors" class="invalid-feedback" style="margin-left: 21%;">
+                    
+                    <div *ngIf="control.userName.errors.required">Ingrese un usuario</div>
+                    
+
+                </div>
+
+
+            </div>
+
+            <div class="input-group mb-3 input divflex">
+                <div>
+                    <span class="input-group-text" id="inputGroup-sizing-default">Contraseña</span>
+                </div>
+                <input type="text" placeholder="Contraseña" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="password" [ngClass]="{ 'is-invalid': control.password.errors && control.password.touched }"> 
+                <div *ngIf="control.userName.errors" class="invalid-feedback" style="margin-left: 21%;">
+                    
+                    <div *ngIf="control.password.errors.required">Ingrese una contraseña</div>
+                    
+
+                </div>
+                
+
+            </div>
+
+            <div class="input-group mb-3 input divflex">
+                <div>
+                    <span class="input-group-text" id="inputGroup-sizing-default">Email</span>
+                </div>
+                <input type="text" placeholder="Email" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" formControlName="email" [ngClass]="{ 'is-invalid': control.email.errors && control.email.touched }"> 
+                <div *ngIf="control.userName.errors" class="invalid-feedback" style="margin-left: 21%;">
+                    
+                    <div *ngIf="control.email.errors.required">Ingrese un correo</div>
+                    
+
+                </div>
+                
+
+            </div>
+
+
+
+        </div>
+    </form>
+</div>
