cambios nuevos en formularios

--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
@@ -40,7 +40,7 @@
               <mat-label>Asignaturas</mat-label>
               <mat-select formControlName="asignaturas">
                 <mat-option *ngFor="let asignatura of asignaturas" [value]="asignatura.codigoAsignatura" >
-                  {{asignatura.codigoAsignatura}}
+                  {{asignatura.nombreAsignatura}}
                 </mat-option>
               </mat-select>
             </mat-form-field>
