--- a/ExpoSoftware/ClientApp/src/app/comite/docente/docente-consulta/docente-consulta.component.html
+++ b/ExpoSoftware/ClientApp/src/app/comite/docente/docente-consulta/docente-consulta.component.html
@@ -31,6 +31,7 @@
 
   <tbody>
     <tr *ngFor="let docente of docentes  | filtroDocente:searchText; index as i ">
+
       <th scope="row">{{ i + 1 }}</th>
       <td>{{ docente.identificacion}} </td>
       <td>{{ docente.nombre }}</td>
@@ -40,6 +41,7 @@
       <div *ngFor="let itemUno of asignatura ">
         <td *ngIf="itemUno.codigoAsignatura===docente.asignaturas">{{itemUno.nombreAsignatura}}</td>
       </div>
+      <td (click)="confirmar(docente.identificacion)"><a routerLink="/docenteConsulta"><mat-icon>delete</mat-icon></a></td>
 
     </tr>
 
