--- a/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
+++ b/ExpoSoftware/ClientApp/src/app/docenteAsesor/proyecto/proyecto-registro/proyecto-registro.component.html
@@ -131,8 +131,8 @@
 
         <div class="col-sm" >
 
-
-    
+          
+        <button  (click)="buscarEstudiante()"  class="btn btn-light">consultar</button>
     
 
         </div>
